<resources>
    <string name="app_name">JOC</string>
    <string name="MAPS_API_KEY" templateMergeStrategy="preserve" translatable="false">AIzaSyAHoROJoCnsD4-7gkV4uPWo0j4DwyyLRU4</string>
    <string name="format_for_server" translatable="false">dd.MM.yyyy HH:mm</string>
    <string name="format_for_server_without_seconds" translatable="false">yyyy-MM-dd HH:mm</string>
    <string name="format_for_display_short" translatable="false">dd MMM yyyy</string>
    <string name="format_for_result" translatable="false">dd MMM yyyy - HH:mm</string>
    <string name="format_for_photo_file" translatable="false">yyyy-MM-dd-HH-mm-ss-SSS</string>

    <string name="loading">Loading</string>
    <string name="permissions">Permissions</string>
    <string name="need_permissions_geo">To be able to search on a map, you must provide access to geolocation</string>
    <string name="need_permissions_global">For the full application to work, you must provide permissions</string>
    <string name="try_again">Try again</string>
    <string name="later">Later</string>
    <string name="to_settings">To Settings</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="authorization">Авторизация</string>
    <string name="make_auth_for">Пройдите авторизацию для ....</string>
    <string name="enter_phone_number">Введите ваш номер телефона</string>
    <string name="enter_sms_code">Введите код подтверждения</string>
    <string name="send">Send</string>
    <string name="authorization_allows_you">Authorization will allow you to place orders, track order status, leave feedback and much more. Go through the process of registration right now, it will take no more than 1 minute.</string>
    <string name="please_phone">Please fill in the phone number</string>
    <string name="send_code">Send code</string>
    <string name="confirm">Confirm</string>
    <string name="its_clear">Понятно</string>
    <string name="please_fill">Please fill in the field \'%1$s\'</string>
    <string name="code">code</string>
    <string name="please_confirm_offert">Пожалуйста подтвердите согласие с оффертой</string>
    <string name="profile">Профиль</string>
    <string name="profile_is_empty_fill_now">Ваш профиль не заполнен, хотите заполнить его сейчас?</string>
    <string name="fill">Заполнить</string>
    <string name="name">Имя</string>
    <string name="phone">Телефон</string>
    <string name="save">Сохранить</string>
    <string name="gallery">Галлерея</string>
    <string name="camera">Камера</string>
    <string name="for_full_work_need_permissions">Для полноценной работы приложения необходимо предоставить разрешения</string>
    <string name="coffee">Кофе</string>
    <string name="orders">Заказы</string>
    <string name="Replies">Отзывы</string>
    <string name="filter">Фильтр</string>
    <string name="average_cup_price">Средняя цена за стакан</string>
    <string name="cafe_type">Тип заведения</string>
    <string name="rating">Рейтинг</string>
    <string name="from">От</string>
    <string name="all">Все</string>
    <string name="coffee_spot">Кофе точка</string>
    <string name="cafe">Кафе</string>
    <string name="apply">Применить</string>
    <string name="m">м</string>
    <string name="km">км</string>
    <string name="visit">Перейти</string>
    <string name="replies">Отзывы</string>
    <string name="sum">"Сумма : "</string>
    <string name="make_order">Оформить</string>
    <string name="quick_order">Быстрый заказ</string>
    <string name="by_distance">По расстоянию</string>
    <string name="by_rating">By rating</string>
    <string name="hot_drinks">Hot drinks</string>
    <string name="cold_drinks">Cold drinks</string>
    <string name="snacks">Закуски</string>
    <string name="basket">Корзина</string>
    <string name="weight">Объем</string>
    <string name="milk">Молоко</string>
    <string name="addables">Добавки</string>
    <string name="sugar_free">Без сахара</string>
    <string name="sugar">Сахар</string>
    <string name="add">Добавить</string>
    <string name="product_added_to_basket">Продукт добавлен в корзину</string>
    <string name="making_time">Время приготовления</string>
    <string name="comment_for_order">Комментарий к заказу</string>
    <string name="make_pay">Оплатить</string>
    <string name="basket_is_empty">Корзина пуста</string>
    <string name="google_pay">Google pay</string>
    <string name="bank_card">Банковская карта</string>
    <string name="saved_cards">Сохраненные карты</string>
    <string name="order_in_app_joc">Оплата заказа в приложении JustOrderCompany</string>
    <string name="payment">Оплата</string>
    <string name="time_plus_dots">Время :</string>
    <string name="repeat">Повторить</string>
    <string name="make_cancel">Отменить</string>
    <string name="review">Отзыв</string>
    <string name="notify_chanel_joc">Уведомления из приложения JOC</string>
    <string name="searching_your_location">Ищем ваше местоположение</string>
    <string name="settings">Настройки</string>
    <string name="location_blocked_go_to_settings">Доступ к местоположению заблокирован =(\nОн необходим для отображения ближайших кофеен</string>
    <string name="register">Регистрация</string>
    <string name="need_register_to_make_order">Для оформления заказа необходимо зарегестрироваться</string>
    <string name="basket_already_contains">В вашей корзине содержаться продукты из другого кафе, хотите продолжить выбор продуктов или очистить корзину и открыть новое меню?</string>
    <string name="_continue">Продолжить</string>
    <string name="clear">Очистить</string>
    <string name="err_no_internet">Отсутствует соединение с сетью</string>
    <string name="err_server_internal">Внутренняя ошибка сервера</string>
    <string name="err_parsing">Ошибка при обработке запроса</string>
    <string name="cafe_cant_take_payment">Данное кафе пока не принимает оплату</string>
    <string name="order_made">Заказ оформлен</string>
    <string name="order_number">Номер заказа : </string>
    <string name="skip">Пропустить</string>
    <string name="dalee">Далее</string>
    <string name="start">Начать</string>
    <string name="no_reviews_yet">Отзывы пока не доступны, но вы можете стать первым, кто это сделает</string>
    <string name="yur_info" translatable="false">"ООО «ДЖОК» ОГРН: 1217700201839\nИНН: 7707452396\nКПП: 770701001\nТелефон: +7 916 347-68-27\ne-mail: jocforpartners@gmail.com"</string>
    <string name="review_about_cafe">Отзыв о кафе</string>
    <string name="favorite">Избранное</string>
    <string name="you_have_no_favorites">У вас пока нет кафе добавленных в избранное. Вы можете добавить их при просмотре кафе.</string>
    <string name="cafe_added_to_favorites">Кафе добавлено в избранное</string>
    <string name="cafe_removed_from_favorites">Кафе удалено из избранного</string>
    <string name="map_legend">Легенда карты</string>
</resources>
