<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray0"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_header"
            style="@style/TvReg.L"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/orange"
            android:textColor="@color/white"
            tools:text="Baksatt" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/tv_bottom"
            android:layout_below="@id/tv_header">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include layout="@layout/item_product" />

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:id="@+id/tv_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    style="@style/TvReg.Xl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sum"
                    android:textColor="@color/gray6" />

                <TextView
                    style="@style/TvBold.Xl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray6"
                    tools:text="502 р" />
            </LinearLayout>

            <TextView
                style="@style/TvBold.Xl"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="12dp"
                android:background="@color/green"
                android:text="@string/make_order"
                android:textColor="@color/white" />

            <TextView
                style="@style/TvBold.Xl"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="12dp"
                android:background="@color/orange"
                android:text="@string/quick_order"
                android:textColor="@color/white" />


        </LinearLayout>

    </RelativeLayout>

</layout>
