<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="false">

    <data>

        <import type="com.justordercompany.client.R" />

        <import type="android.graphics.drawable.GradientDrawable" />

        <import type="com.justordercompany.client.base.data_binding.BuilderBg" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray8_trans_50"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="24dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TvBold.Xl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/filter"
                    android:textColor="@color/gray8" />

                <TextView
                    style="@style/TvReg.M"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="12dp"
                    android:gravity="left"
                    android:text="@string/average_cup_price"
                    android:textColor="@color/gray5" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="12dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_price_min"
                        style="@style/TvReg.M"
                        android:layout_width="0dp"
                        android:layout_height="32dp"
                        android:layout_weight="10"
                        android:background="@{BuilderBg.getSimpleDrawable(2f,R.color.gray2)}"
                        android:textColor="@color/gray8" />

                    <View
                        android:layout_width="12dp"
                        android:layout_height="0dp" />

                    <TextView
                        android:id="@+id/tv_price_max"
                        style="@style/TvReg.M"
                        android:layout_width="0dp"
                        android:layout_height="32dp"
                        android:layout_weight="10"
                        android:background="@{BuilderBg.getSimpleDrawable(2f,R.color.gray2)}"
                        android:textColor="@color/gray8" />

                </LinearLayout>

                <com.innovattic.rangeseekbar.RangeSeekBar
                    android:id="@+id/range_prices"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="2dp"
                    android:isScrollContainer="true"
                    app:rsb_max="100"
                    app:rsb_maxThumbOffsetHorizontal="20"
                    app:rsb_minThumbOffsetHorizontal="-20"
                    app:rsb_maxThumbDrawable="@drawable/range_seek_cursor"
                    app:rsb_minRange="5"
                    app:rsb_minThumbDrawable="@drawable/range_seek_cursor"
                    app:rsb_trackColor="@color/gray1"
                    app:rsb_trackSelectedColor="@color/orange"
                    app:rsb_trackSelectedThickness="8dp"
                    app:rsb_trackThickness="8dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TvReg.Xxs"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:text="0"
                        android:textColor="@color/gray4" />

                    <TextView
                        style="@style/TvReg.Xxs"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:text="100"
                        android:textColor="@color/gray4" />

                    <TextView
                        style="@style/TvReg.Xxs"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:text="200"
                        android:textColor="@color/gray4" />

                    <TextView
                        style="@style/TvReg.Xxs"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:text="300"
                        android:textColor="@color/gray4" />

                    <TextView
                        style="@style/TvReg.Xxs"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:text="400"
                        android:textColor="@color/gray4" />

                    <TextView
                        style="@style/TvReg.Xxs"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:text="500"
                        android:textColor="@color/gray4" />

                    <TextView
                        style="@style/TvReg.Xxs"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:text="600"
                        android:textColor="@color/gray4" />

                    <TextView
                        style="@style/TvReg.Xxs"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:text="700"
                        android:textColor="@color/gray4" />

                    <TextView
                        style="@style/TvReg.Xxs"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:text="800"
                        android:textColor="@color/gray4" />

                    <TextView
                        style="@style/TvReg.Xxs"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:text="900"
                        android:textColor="@color/gray4" />

                    <TextView
                        style="@style/TvReg.Xxs"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:text="1000"
                        android:textColor="@color/gray4" />

                </LinearLayout>

                <TextView
                    style="@style/TvReg.M"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="12dp"
                    android:gravity="left"
                    android:text="@string/cafe_type"
                    android:textColor="@color/gray5" />

                <RadioGroup
                    android:id="@+id/rg_cafe_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="12dp"
                    android:checkedButton="@id/rb_all"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_all"
                        style="@style/RadioButton.GradOrange"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:text="@string/all" />

                    <RadioButton
                        android:id="@+id/rb_coffee_spot"
                        style="@style/RadioButton.GradOrange"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:text="@string/coffee_spot" />

                    <RadioButton
                        android:id="@+id/rb_cafe"
                        style="@style/RadioButton.GradOrange"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:text="@string/cafe" />


                </RadioGroup>

                <TextView
                    style="@style/TvReg.M"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="12dp"
                    android:gravity="left"
                    android:text="@string/rating"
                    android:textColor="@color/gray5" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/TvReg.M"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:text="@string/from"
                        android:textColor="@color/gray8" />

                    <com.willy.ratingbar.ScaleRatingBar
                        android:id="@+id/rating_bar"
                        style="@style/RatingBar"
                        android:layout_width="0dp"
                        android:layout_weight="25"
                        android:clipToPadding="false"
                        android:padding="6dp"
                        app:srb_starHeight="22dp"
                        app:srb_starPadding="0dp"
                        app:srb_starWidth="24dp" />

                    <TextView
                        android:id="@+id/tv_rating"
                        style="@style/TvReg.L"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:text="4.0"
                        android:textColor="@color/gray8" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="24dp"
                    android:background="@color/gray3" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_cancel"
                        style="@style/TvReg.L"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="10"
                        android:background="@{BuilderBg.getSquareRippleTransGray()}"
                        android:text="@string/cancel"
                        android:textColor="@color/gray8" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="40dp"
                        android:background="@color/gray3" />

                    <TextView
                        android:id="@+id/tv_ok"
                        style="@style/TvReg.L"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="10"
                        android:background="@{BuilderBg.getSquareRippleTransGray()}"
                        android:text="@string/apply"
                        android:textColor="@color/gray8" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</layout>